applications/weave-scope/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: weave-scope
  namespace: weave
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-clusterissuer
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    external-dns.alpha.kubernetes.io/hostname: 'scope.tiborpilz.dev'
spec:
  tls:
    - hosts:
        - scope.tiborpilz.dev
      secretName: weave-tls
  rules:
    - host: scope.tiborpilz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-scope-app
                port:
                  number: 80
